# s2st-service

./: .gitignore  AGENTS.md  README.md  TODO.md  chatgpt_codex_setup_script.sh  download.sh  lint.sh  mypy.ini  pyproject.toml  ruff.toml  run.sh  run_main.sh  run_translate.sh  run_using_azure.sh  run_vad.sh  run_vad_and_translate.sh  tailscale_serve.sh  to_chatgpt.sh
app/: azure_test_s2st.py  azure_test_s2tt.py  common.py  inspect_machine.py  main.py  translate.py  vad.py  vad_and_translate.py
test/: azure_test_s2st.py  azure_test_s2tt.py  index.html  run.sh
